Lógica funcional para el componente de 'Users', se añadió la hora en header y más cambios generales

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,5 +1,7 @@
 @import "variables";
 
 @import "../../../node_modules/bootstrap/scss/bootstrap";
+@import "../../../node_modules/primereact/resources/themes/saga-blue/theme.css";
+@import "../../../node_modules/primereact/resources/primereact.min.css";
 @import "./layout/sidebar";
 @import "./layout/container";
